src/test/resources/semantic/error/TS_ERROR_HEREDAR_STRUCTS_PREDEFINIDOS.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 8 | No se puede heredar de un tipo de dato predefinido. Tipo: Int |

struct A:Int{

}
impl A{
    .(){

    }
}

start{

}